# log-forwarding-robot

./: .dockerignore  .env.dev.example  .env.prod.example  .pre-commit-config.yaml  Dockerfile  README.md  compose.override.yaml  compose.yaml  entrypoint.sh  gunicorn.conf.py  justfile  pyproject.toml  set_webhook.py
src/: bot.py  cli.py  config.py  constants.py  context.py  handlers.py  logger.py  main.py  router.py  schemas.py
src/ptb/: __init__.py  bot.py  constants.py  handlers.py  models.py  utils.py  webhooks.py
